# GameEngine

./: .gitignore  .gitmodules  .itch.toml  ARCHITECTURE.md  ASSET_PIPELINE.md  BUILD_WITHOUT_VS.md  CI_IMPLEMENTATION.md  CMakeLists.txt  COMPATIBILITY_VERIFICATION.md  COMPLETION_REPORT.md  CONSOLE_IMPLEMENTATION.md  DEBUG_CONSOLE_GUIDE.md  DOWNLOAD_BINARIES.md  ENGINE_SYSTEMS.md  FEATURES.md  GameEngine.sln  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  ITCHIO_ASSETS.md  ITCHIO_INTEGRATION.md  ONECLICK_BUILD.md  OneClickBuild.bat  QUICKSTART.md  QUICKSTART_COMPILER.md  README.md  README_WINDOWS.md  RELEASE_PROCESS.md  ROADMAP.md  SCRIPT_COMPILER.md  TESTING_BINARIES.md  TROUBLESHOOTING.md  UBUNTU_24_04.md  VERSION_UPDATES.md  VISUAL_STUDIO_SETUP.md  VS2022_COMPATIBILITY.md  WINDOWS_TROUBLESHOOTING.md  build-mingw.bat  build.bat  build.ps1  build.sh  (+6 more)
.github/workflows/: build-release.yml  build-test.yml
_codeql_build_dir/: Makefile
assets/: README.md
docs/: NEW_FEATURES.md
scripts/: README.md  demo.script  startup.script
src/: AssetManager.h  AudioSystem.h  Camera.h  DebugConsole.h  DebugTools.h  EventSystem.h  InputManager.h  ItchIO.h  ItchIOExample.cpp  ItchIOExample.cpp.example  LightSystem.h  MaterialSystem.h  Model.h  PhysicsSystem.h  PostProcessing.h  SceneGraph.h  ScriptCompiler.h  Shader.h  Terrain.h  TextureGenerator.h  TextureLoader.h  UISystem.h  Water.h  Wind.h  main.cpp
src/GameEngine.Core/: Camera.cpp  Camera.h  EngineCore.cpp  EngineCore.h  GameEngine.Core.vcxproj  Renderer.cpp  Renderer.h  VoxelChunk.cpp  VoxelChunk.h  VoxelEngine.cpp  VoxelEngine.h
src/GameEngine.Editor/: App.xaml  App.xaml.cs  EngineInterop.cs  EnginePanel.cs  GameEngine.Editor.csproj  MainWindow.xaml  MainWindow.xaml.cs
tools/: README.md  TESTING.md  check-compiler.sh  check-vs2022-compiler.bat  check-vs2022-compiler.ps1  setup-mingw.bat
